--- a/client/package.json
+++ b/client/package.json
@@ -16,9 +16,11 @@
     "@types/react-dom": "^17.0.13",
     "axios": "^0.26.1",
     "framer-motion": "^6.2.8",
+    "lottie-react": "^2.2.1",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^12.0.4",
     "react-icons": "^4.3.1",
     "react-query": "^3.34.16",
     "react-router-dom": "^6.2.2",
