--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-session": "^1.17.2",
+    "gridfs-stream": "^1.1.1",
     "mongoose": "^6.2.5",
     "multer": "^1.4.4",
     "multer-gridfs-storage": "^5.0.2",
